--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -1,15 +1,27 @@
-<!doctype html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>Todos</title>
-  <base href="/">
+    <base href="/" />
+    <title>Todo App - Test/Dev to cloud</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href = "https://bootswatch.com/3/paper/bootstrap.min.css">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href = "https://bootswatch.com/3/paper/bootstrap.min.css">
+
+    <!-- application css -->
+    <link href="app.css" rel="stylesheet" />
+
+    <!-- polyfill(s) for older browsers -->
+    <script src="node_modules/core-js/client/shim.min.js"></script>
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+
+    <script src="systemjs.config.js"></script>
+    <script>
+        System.import('app').catch(function (err) { console.error(err); });
+    </script>
 </head>
 <body>
-  <app-root></app-root>
+    <app>Loading...</app>
 </body>
 </html>
